--- a/frontend/src/app/views/user/user-blogs/blog-add/blog-add.component.html
+++ b/frontend/src/app/views/user/user-blogs/blog-add/blog-add.component.html
@@ -1,54 +1,127 @@
 <br><br><br><br><br><br><br><br>
+<header>
 <section class="py-7 py-md-0 bg-login" id="login">
   <div class="col-md-8 col-sm-10 col-12 mx-auto my-auto text-center align-baseline">
     <div class="row vh-md-100">
 
-      <body>
-        <div class="creerblog">
-          <h1>Creer un nouveau blog</h1>
-          <p>Ajoutez ci-dessous des informations sur le blog, l'auteur ou tout autre contexte d'arrière-plan. Faites-en quelques phrases pour que les gens puissent ramasser quelques informations.</p>
-          <form action="/page-traitement-donnees" method="post">
-          <div>
-          <label for="nom1">Le titre: </label>
-          <input type="text" id="title" name="titre" placeholder="Le titre du blog :"
-          [(ngModel)]="blog.title" required minlength="3">
-          </div>
 
-          <div class="custom-file">
-            <input type="file" class="custom-file-input" id="customFile">
-            <label class="custom-file-label" for="customFile" placeholder="exemple image, fichier pdf ....">Choisir un fichier</label>
-          </div>
-          <div>
-            <label for="nom">La description : </label>
-            <input type="text" id="description" name="description" placeholder="Une coute description :" required>
+
+
+
+
+      <div class="container-fluid">
+
+        <div class="t">
+          <div class="card-header">
+            <ul class="nav nav-pills card-header-pills">
+              <h3>Ajouter un blog</h3>
+
+            </ul>
+
+            <form autocomplete="off" #form="ngForm" >
+
+              <div class="form-group">
+                    <label for="titre" >Titre : </label>
+                    <input type="text" class="form-control" id="titre" placeholder="le titre du blog" classe="formControl"
+                    ngModel name="titre" [(ngModel)]="blog.title" ngModel  #titre="ngModel" required minlength="3" maxlength="20">
+                    <div class="alert alert-danger" *ngIf="titre.touched && !titre.valid">
+                     <div *ngIf="titre?.errors?.['required']">Le champs est obligatoire</div>
+                     <div *ngIf="titre?.errors?.['minlength']">Le champs doit contenir au moins 3 caractères</div>
+                     <div *ngIf="titre?.errors?.['maxlength']">Le champs doit contenir au maximum 20 caractères</div>
+
+                </div>
+                  <div class="form-group">
+                    <label for="description" class="form-label2">Description : </label>
+                    <input type="text" class="form-control" id="description" placeholder="la description du blog" classe="formControl2"
+                     [(ngModel)]="blog.description">
+                  </div>
+                  <div class="form-group">
+                    <label for="formFile" class="form-label">Ajouter un fichier</label>
+                    <input class="form-control" type="file" id="formFile"  [(ngModel)]="blog.img" required>
+                  </div>
+                  <div class="form-group">
+                    <label for="text" class="form-label">Le contenu du blog</label>
+                    <textarea class="form-control" id="text" rows="3" placeholder="Veuillez saisir ou coller l'article de votre blog ici ....."
+                    ngModel name="body" ngModel  #text="ngModel" [(ngModel)]="blog.text" required minlength="300" >
+                    <div class="alert alert-danger" *ngIf="text.touched && !text.valid">
+                    Le contenu du blog</textarea>
+                  </div>
+                  <div>Catégorie
+                  <select class="form-select form-select-sm" aria-label=".form-select-sm example" aria-placeholder="Catégorie" [(ngModel)]="blog.category" [ngModelOptions]="{standalone: true}" >
+                    <option selected ></option>
+                    <option value="1">La pêche</option>
+                    <option value="2">La chasse</option>
+                    <option value="3">Camping</option>
+                  </select>
+                </div><br><br>
+
+                  <div class="d-grid gap-2">
+                    <button class="btn btn-primary" type="submit" onclick="save()">Publier</button>
+                    <button class="btn btn-primary" type="button" routerLink="/blogs">Annuler</button>
+                  </div>
+                  </div>
+
+              </form>
+
             </div>
-            <div>
-              <label for="message">Votre contenu du blog</label>
-              <textarea id="message" name="message" placeholder="La chasse au gibier est un problème à grande échelle qui va exiger une stratégie globale. ...." required></textarea>
-              </div>
-          <div>
-          <label for="sujet">Quel est la catégorie de ce blog ?</label>
-          <select name="sujet" id="sujet" required>
-          <option value="" disabled selected hidden>Choisissez la catégorie</option>
-          <option value="probleme-compte">La pêche </option>
-          <option value="question-produit">La chasse</option>
-          <option value="suivi-commande">Camping</option>
-          <option value="autre">Autre...</option>
-          </select>
-          </div>
-
-          <div>
-            <div class="d-grid gap-2 col-6 mx-auto">
-             <button type="submit" class="btn btn-primary" type="button" (click)="save()">Publier</button>
-              <button  type="reset" class="btn btn-primaryy" type="button" routerLink="/blogs">Annuler</button>
-
 
             </div>
 
+
           </div>
-          </form>
+
+    </div>
+  </div>
+ </section>
+<br><br><br><br>
+
+
+ <footer class="bg-dark text-center text-white">
+  <!-- Grid container -->
+  <div class="container p-4 pb-0">
+    <!-- Section: Form -->
+    <section class="">
+      <form action="">
+        <!--Grid row-->
+        <div class="row d-flex justify-content-center" style="margin-right:3px ;">
+          <!--Grid column-->
+          <div class="col-auto">
+            <p class="pt-2" style="margin-right:8px ">
+              <strong>Inscrivez-vous à notre newsletter</strong>
+            </p>
           </div>
-      </body>
+          <!--Grid column-->
 
+          <!--Grid column-->
+          <div class="col-md-5 col-12">
+            <!-- Email input -->
+            <div class="form-outline form-white mb-4">
+              <input type="email" id="form5Example29" class="form-control" placeholder="Adresse email" />
+              <label class="form-label" for="form5Example29"></label>
+            </div>
+          </div>
+          <!--Grid column-->
 
+          <!--Grid column-->
+          <div class="col-auto">
+            <!-- Submit button -->
+            <button type="submit" class="btn btn-outline-light mb-4">
+              S'abonner
+            </button>
+          </div>
+          <!--Grid column-->
+        </div>
+        <!--Grid row-->
+      </form>
+    </section>
+    <!-- Section: Form -->
+  </div>
+  <!-- Grid container -->
 
+  <!-- Copyright -->
+  <div class="text-center p-3" style="background-color: rgba(18, 17, 17, 0.882);">
+    © 2022 Copyright:
+    <a class="text-white" href="">NEN TEAM</a>
+  </div>
+  <!-- Copyright -->
+</footer>
