--- a/frontend/src/app/views/user/user/profile/profile.component.html
+++ b/frontend/src/app/views/user/user/profile/profile.component.html
@@ -9,7 +9,7 @@
                 <div class="container rounded bg-white mt-5" >
                     <div class="row">
                         <div class="col-md-4 border-right">
-                            <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" src="https://i.imgur.com/0eg0aG0.jpg" width="90"><span class="font-weight-bold">John Doe</span><span class="text-black-50">john_doe12@bbb.com</span><span>Role</span></div>
+                            <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" src="https://i.imgur.com/0eg0aG0.jpg" width="90"><span class="font-weight-bold">{{user.Nom}}</span><span class="text-black-50"></span><span>{{user.type}}</span></div>
                         </div>
                         <div class="col-md-8">
                             <div class="p-3 py-5">
@@ -19,20 +19,20 @@
                                     </div>
                                 </div>
                                 <div class="row mt-2">
-                                    <div class="col-md-6"><input type="text" class="form-control" placeholder="first name" value="{{user.Prenom}}"></div>
-                                    <div class="col-md-6"><input type="text" class="form-control" value="" placeholder="Last name"></div>
+                                    <div class="col-md-6"><input type="text" class="form-control" placeholder="first name" value="{{user.Nom}}"></div>
+                                    <div class="col-md-6"><input type="text" class="form-control" value="" placeholder="Last name" value="{{user.Prenom}}"></div>
                                 </div>
                                 <div class="row mt-3">
                                     <div class="col-md-6"><input type="text" class="form-control" placeholder="Email" value="{{user.Email}}"></div>
                                     <div class="col-md-6"><input type="text" class="form-control" value="" placeholder="Phone number"></div>
                                 </div>
                                 <div class="row mt-3">
-                                    <div class="col-md-6"><input type="text" class="form-control" placeholder="address" value=""></div>
-                                    <div class="col-md-6"><input type="text" class="form-control" value="" placeholder="Country"></div>
+                                    <div class="col-md-6"><input type="text" class="form-control" placeholder="age" value="{{user.Age}}"></div>
+                                    <div class="col-md-6"><input type="text" class="form-control"  placeholder="type de compte " value="{{user.type}}"></div>
                                 </div>
                                 <div class="row mt-3">
-                                    <div class="col-md-6"><input type="text" class="form-control" placeholder="User Id" value="">{{user_id}}</div>
-                                    <div class="col-md-6"><input type="text" class="form-control" value="" placeholder="Role"></div>
+                                    <div class="col-md-6"><input type="text" class="form-control" placeholder="User Id" value="{{user_id}}"></div>
+                                    <div class="col-md-6"><input type="text" class="form-control" value="user.isValidated" placeholder="Etat"></div>
                                 </div>
                                 <div class="mt-5 text-right"><button class="btn btn-primary profile-button" type="button">Edit Profile</button></div>
                             </div>
