--- a/frontend/src/app/views/user/user/profile/profile.component.html
+++ b/frontend/src/app/views/user/user/profile/profile.component.html
@@ -24,17 +24,18 @@
                                 </div>
                                 <div class="row mt-3">
                                     <div class="col-md-6"><input type="text" class="form-control" placeholder="Email" value="{{user.Email}}"></div>
-                                    <div class="col-md-6"><input type="text" class="form-control" value="" placeholder="Phone number"></div>
+                                    <div class="col-md-6"><input type="text" class="form-control"  placeholder="Bio" value="{{user.Bio}}"></div>
                                 </div>
                                 <div class="row mt-3">
                                     <div class="col-md-6"><input type="text" class="form-control" placeholder="age" value="{{user.Age}}"></div>
                                     <div class="col-md-6"><input type="text" class="form-control"  placeholder="type de compte " value="{{user.type}}"></div>
                                 </div>
                                 <div class="row mt-3">
+                                    <div class="col-md-6"><input type="text" class="form-control" placeholder="Etat"  value="{{user.isValidated}}"></div>
                                     <div class="col-md-6"><input type="text" class="form-control" placeholder="User Id" value="{{user_id}}"></div>
-                                    <div class="col-md-6"><input type="text" class="form-control" value="user.isValidated" placeholder="Etat"></div>
+                                   
                                 </div>
-                                <div class="mt-5 text-right"><button class="btn btn-primary profile-button" type="button">Edit Profile</button></div>
+                                <div class="mt-5 text-right"><button class="btn btn-primary profile-button" type="button"  href="profile/:id">Editer profile</button></div>
                             </div>
                         </div>
                     </div>
