--- a/frontend/src/app/views/user/user/register/register.component.html
+++ b/frontend/src/app/views/user/user/register/register.component.html
@@ -25,6 +25,21 @@
                 <div class="d-flex flex-row align-items-center mb-4">
                   <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                   <div class="form-outline flex-fill mb-0">
+                    <input type="text" id="form3Example3c" class="form-control" name="Age" placeholder="Age" #Age="ngModel"  ngModel/>
+                    <!--                      <label class="form-label" for="form3Example3c">Prenom</label>-->
+                  </div>
+                </div>
+                <div class="d-flex flex-row align-items-center mb-4">
+                  <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+                  <div class="form-outline flex-fill mb-0">
+                    <input type="text" id="form3Example3c" class="form-control" name="Bio" placeholder="Bio" #Bio="ngModel"  ngModel/>
+                    <!--                      <label class="form-label" for="form3Example3c">Prenom</label>-->
+                  </div>
+                </div>
+                
+                <div class="d-flex flex-row align-items-center mb-4">
+                  <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+                  <div class="form-outline flex-fill mb-0">
                     <input type="email" id="form3Example1" class="form-control" name="Email" placeholder="Email" #Email="ngModel"  ngModel />
                     <!--                      <label class="form-label" for="form3Example1">Email</label>-->
                   </div>
