--- a/frontend/src/app/views/user/home/home/home.component.html
+++ b/frontend/src/app/views/user/home/home/home.component.html
@@ -4,7 +4,7 @@
     <div class="row vh-md-100">
 
       <div class="col-md-8 col-sm-10 col-12 mx-auto my-auto text-center">
-        <button type="button" class="btn btn-success btn-login d-inline-flex flex-row align-items-center"
+        <button class="btn btn-success btn-login d-inline-flex flex-row align-items-center"
                 routerLink="/user/sign_in">
           Get started now
           <em class="ml-2" data-feather="arrow-right"></em>
@@ -19,17 +19,17 @@
               class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
               <ul>
-                <a class="active" href="#"><img width="30" height="50" alt="" class="d-inline-block align-middle mr-2"
+                <a class="img-hover-zoom"><img width="30" height="50" alt="" class="d-inline-block align-middle mr-2"
                                                 data-toggle="tooltip" data-placement="top"
                                                 title="Chasse dans les forets"
                                                 src="../../../../../assets/img/forest-Icon-W.png"/></a>
-                <a href="#"><img width="30" height="50" alt="" class="d-inline-block align-middle mr-2"
+                <a class="img-hover-zoom" href="#"><img width="30" height="50" alt="" class="d-inline-block align-middle mr-2"
                                  data-toggle="tooltip" data-placement="top" title="pêche"
                                  src="../../../../../assets/img/sea-icon-W.png"/> </a>
-                <a href="#"><img width="30" height="50" alt="" class="d-inline-block align-middle mr-2"
+                <a class="img-hover-zoom"><img width="30" height="50" alt="" class="d-inline-block align-middle mr-2"
                                  data-toggle="tooltip" data-placement="top" title="Chasse dans les deserts"
                                  src="../../../../../assets/img/desert-Icon-W.png"/></a>
-                <a href="#"><img width="30" height="50" alt="" class="d-inline-block align-middle mr-2"
+                <a class="img-hover-zoom"><img width="30" height="50" alt="" class="d-inline-block align-middle mr-2"
                                  data-toggle="tooltip" data-placement="top" title="Chasse des oiseaux"
                                  src="../../../../../assets/img/sky-Icon-W.png"/></a>
               </ul>
