--- a/frontend/src/app/views/user/user-maps/camp-add/camp-add.component.css
+++ b/frontend/src/app/views/user/user-maps/camp-add/camp-add.component.css
@@ -1,5 +1,5 @@
 .contact-us {
-  padding: 150px 0px;
+  padding: 150px;
   background: #343a40;
 }
 .section-title h2 {
@@ -9,7 +9,7 @@
   text-transform: uppercase;
   letter-spacing: 8px;
   border-bottom: 5px solid #4f5050 ;
-  padding-bottom: 50px;
+  padding-bottom: 25px;
   display: inline-block;
 }
 .section-title p {
