--- a/frontend/src/app/layouts/user-layout/user-layout.component.css
+++ b/frontend/src/app/layouts/user-layout/user-layout.component.css
@@ -1,6 +1,4 @@
 
-
-
 .bg-hero {
   background-color: #000000;
   background-image: url("src/assets/img/HomePage1.jpg");
@@ -9,8 +7,10 @@
   background-size: cover;
   max-width: 100%;
   height: auto;
-  width: auto\9;
-  position: center; }
+  width: auto \9;
+  position: center;
+}
+
 .bg-hero:before {
   position: absolute;
   z-index: 1;
@@ -20,7 +20,44 @@
   left: 0;
   top: 0;
   content: "";
-  background-color: rgba(0, 0, 0, 0.7); }
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
 .bg-hero .container {
   z-index: 2;
-  position: relative; }
+  position: relative;
+}
+
+.logo {
+
+}
+
+
+.navbar-dark .navbar-nav .nav-link {
+  color: rgba(255, 255, 255, 0.7);
+}
+
+.navbar-dark .navbar-nav .nav-link:hover, .navbar-dark .navbar-nav .nav-link:focus {
+  color: rgba(255, 255, 255, 0.9);
+}
+
+.navbar-dark .navbar-nav .nav-link.disabled {
+  color: rgba(255, 255, 255, 0.9);
+}
+
+.navbar-dark .navbar-nav .show > .nav-link,
+.navbar-dark .navbar-nav .active > .nav-link,
+.navbar-dark .navbar-nav .nav-link.show,
+.navbar-dark .navbar-nav .nav-link.active {
+  color: #EEEEEE;
+}
+
+.navbar-expand-xl .navbar-nav .nav-link {
+  padding-right: 0.75rem;
+  padding-left: 0.75rem;
+}
+
+
+.container-fluid {
+  background-color: rgba(0, 0, 0, 0.2);
+}
