--- a/frontend/src/app/layouts/user-layout/user-layout.component.html
+++ b/frontend/src/app/layouts/user-layout/user-layout.component.html
@@ -2,7 +2,7 @@
 <section class="smart-scroll" >
   <div class="container-fluid">
     <nav class="navbar navbar-expand-md navbar-dark">
-      <a href="#" class="navbar-brand active" >
+      <a href="#" class="navbar-brand active logo" >
         <!-- Logo Image-->
         <img src="assets/img/Logo_blanc.png " width="60" class="d-inline-block align-middle mr-2 ">
       </a>
@@ -26,11 +26,7 @@
             <a class="nav-link page-scroll" href="#maps" routerLink="/maps">Maps</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link page-scroll d-flex flex-row align-items-center text-primary" href="#"
-               routerLink="/products">
-              <em data-feather="layout" width="18" height="18" class="mr-2"></em>
-              Shop
-            </a>
+            <a class="nav-link page-scroll" href="#products" routerLink="/products">Store</a>
           </li>
         </ul>
       </div>
