--- a/frontend/src/app/views/user/home/home/home.component.css
+++ b/frontend/src/app/views/user/home/home/home.component.css
@@ -31,3 +31,25 @@
   margin-top: 700px;
   border-radius: 2px;
 }
+
+
+/* [1] The container */
+.img-hover-zoom {
+  height: 300px; /* [1.1] Set it as per your need */
+  overflow: hidden; /* [1.2] Hide the overflowing of child elements */
+}
+
+/* [2] Transition property for smooth transformation of images */
+.img-hover-zoom img {
+  transition: transform .5s ease;
+}
+
+/* [3] Finally, transforming the image when container gets hovered */
+.img-hover-zoom:hover img {
+  transform: scale(1.5);
+}
+
+
+.img {
+  padding-left: 100px;
+}
