--- a/frontend/src/app/views/user/user-blogs/blog-add/blog-add.component.html
+++ b/frontend/src/app/views/user/user-blogs/blog-add/blog-add.component.html
@@ -75,6 +75,25 @@
  </section>
 <br><br><br><br>
 
+<!--<div class="container-fluid" style="width:30% ;border-color: rgb(229, 229, 228);">
+  <div class="modal-content rounded-4 shadow">
+  <div class="modal-header border-bottom-0">
+    <h5 class="modal-title">Modal title</h5>
+    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+  </div>
+
+  <div class="modal-body py-0">
+    <p>Voulez-vous publier ce blog ?</p>
+  </div>
+  <div class="modal-footer flex-column border-top-0">
+    <button type="button" class="btn btn-lg btn-primary w-100 mx-0 mb-2">Confirmer</button>
+    <button type="button" class="btn btn-lg btn-light w-100 mx-0" data-bs-dismiss="modal">Close</button>
+  </div>
+  </div>
+
+</div>-->
+
+
 
  <footer class="bg-dark text-center text-white">
   <!-- Grid container -->
