--- a/frontend/src/app/views/user/user/profile/profile.component.html
+++ b/frontend/src/app/views/user/user/profile/profile.component.html
@@ -27,7 +27,7 @@
                                     <div class="col-md-6"><input type="text" class="form-control"  placeholder="Bio" value="{{user.Bio}}"></div>
                                 </div>
                                 <div class="row mt-3">
-                                    <div class="col-md-6"><input type="text" class="form-control" placeholder="age" value="{{user.Age}}"></div>
+                                    <!-- <div class="col-md-6"><input type="text" class="form-control" placeholder="Age" value="{{user.Age}}"></div> -->
                                     <div class="col-md-6"><input type="text" class="form-control"  placeholder="type de compte " value="{{user.type}}"></div>
                                 </div>
                                 <div class="row mt-3">
