--- a/frontend/src/app/views/admin/admin-users/user-details/user-details.component.html
+++ b/frontend/src/app/views/admin/admin-users/user-details/user-details.component.html
@@ -1,63 +1,108 @@
-<section class="py-7 py-md-0 bg-login" id="login">
+<section class="py-7 py-md-6 bg-login" id="login">
     <div class="container">
-      <div class="row vh-md-100">
-  
-        <div class="col-md-8 col-sm-10 col-12 mx-auto my-auto text-center">
-          <div class="card-body p-md-5">
-            <div class="row justify-content-center">
-          
-                <div class="container rounded bg-white mt-5" >
-                    <div class="row">
-                        <div class="col-md-4 border-right">
-                            <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" src="https://i.imgur.com/0eg0aG0.jpg" width="90"><span class="font-weight-bold">{{user.Nom}}</span><span class="text-black-50"></span><span>{{user.type}}</span></div>
-                        </div>
-                        <div class="col-md-8">
-                            <div class="p-3 py-5">
-                                <div class="d-flex justify-content-between align-items-center mb-3">
-                                    <div class="d-flex flex-row align-items-center back"><i class="fa fa-long-arrow-left mr-1 mb-1"></i>
-                                        <h6>Shop</h6>
-                                    </div>
+        <div class="row vh-md-10">
+
+            <div class="col-md-10 col-sm-8 col-14 mx-auto my-auto text-center">
+                <div class="card-body p-md-10">
+                    <div class="row justify-content-center">
+
+                        <div class="container rounded bg-white mt-5">
+                            <div class="row">
+                                <div class="col-md-4 border-right">
+                                    <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img
+                                            class="rounded-circle mt-5" src="https://i.imgur.com/0eg0aG0.jpg"
+                                            width="90"><span class="font-weight-bold">{{user.Nom}}</span><span
+                                            class="text-black-50"></span><span>{{user.type}}</span></div>
                                 </div>
-                                <div class="row mt-2">
-                                    <div class="col-md-6"><input type="text" class="form-control" placeholder="first name" value="{{user.Nom}}+{{user.Prenom}}"></div>
-                                    <div class="col-md-6"><input type="text" class="form-control" placeholder="Email" value="{{user.Email}}"></div>
-                                </div>
-                                <!-- <div class="row mt-3">
+                                <div class="col-md-8">
+                                    <div class="p-3 py-5">
+
+                                        <div class="row mt-2">
+                                            <div class="col-md-6"><input type="text" class="form-control"
+                                                    placeholder="first name" value="{{user.Nom}} {{user.Prenom}}">
+                                            </div>
+                                            <div class="col-md-6"><input type="text" class="form-control"
+                                                    placeholder="Email" value="{{user.Email}}"></div>
+                                        </div>
+                                        <!-- <div class="row mt-3">
                                     <div class="col-md-6"><input type="text" class="form-control" placeholder="Email" value="{{user.Email}}"></div>
                                     <div class="col-md-6"><input type="text" class="form-control"  placeholder="Bio" value="{{user.Bio}}"></div>
                                 </div> -->
-                                <div class="row mt-3">
-                                <SELECT>
-                                    <OPTION Value="isAdmin">Admin</OPTION>
-                                    <OPTION Value="N'est pas Admin">Utilisateur normal</OPTION>
-                                </SELECT>
-                            </div>
-                            <div class="row mt-3">
-                                <SELECT>
-                                    <OPTION Value="Ce compte est validé">Compte validé</OPTION>
-                                    <OPTION Value="Ce compte n'est pas validé">Comte nom validé</OPTION>
-                                </SELECT>
-                            </div>
-                               
+                                        <div class="row mt-4">
+                                            <div class="col-md-3">
+
+                                                    <div class="dropdown">
+                                                      <button class="btn btn-outline dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-expanded="false">
+                                                        <span>Compte</span>
+                                                        <i class="fa fa-caret-down"></i>
+                                                      </button>
+                                                      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                                        <li><a class="dropdown-item" href="#">Compte vérifié</a></li>
+                                                        <li><a class="dropdown-item" href="#">Compte non vérifié</a></li>
+                                                      </ul>
+                                                    </div>
+                                                     
+                                      
+                                                   </div>
+                                            
+                                            <div class="col-md-1">
+
+                                            </div>
+                                            <div class="col-md-3">
+
+                                                    <div class="dropdown">
+                                                      <button class="btn btn-outline dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-expanded="false">
+                                                        <span>Type</span>
+                                                        <i class="fa fa-caret-down"></i>
+                                                      </button>
+                                                      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                                        <li><a class="dropdown-item" href="#">Admin</a></li>
+                                                        <li><a class="dropdown-item" href="#">Simple User</a></li>
+                                                      </ul>
+                                                    </div>
+                                                     
+                                      
+                                                   </div>
+
+                                            <div class="col-md-1">
+
+                                            </div>
+                                            <div class="col-md-3">
+
+                                                    <div class="dropdown">
+                                                      <button class="btn btn-outline dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-expanded="false">
+                                                        <span>3 choix</span>
+                                                        <i class="fa fa-caret-down"></i>
+                                                      </button>
+                                                      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                                        <li><a class="dropdown-item" href="#">1</a></li>
+                                                        <li><a class="dropdown-item" href="#">2</a></li>
+                                                        <li><a class="dropdown-item" href="#">3</a></li>
+                                                      </ul>
+                                                    </div>
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                </div>
                             </div>
                         </div>
+                        <script type='text/javascript'
+                            src='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js'></script>
+                        <script type='text/javascript' src='#'></script>
+                        <script type='text/javascript' src='#'></script>
+                        <script type='text/javascript' src='#'></script>
+                        <script type='text/javascript'></script>
+                        <script type='text/javascript'>var myLink = document.querySelector('a[href="#"]');
+                            myLink.addEventListener('click', function (e) {
+                                e.preventDefault();
+                            });</script>
+
+
+
                     </div>
                 </div>
-                                            <script type='text/javascript' src='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js'></script>
-                                            <script type='text/javascript' src='#'></script>
-                                            <script type='text/javascript' src='#'></script>
-                                            <script type='text/javascript' src='#'></script>
-                                            <script type='text/javascript'></script>
-                                            <script type='text/javascript'>var myLink = document.querySelector('a[href="#"]');
-                                            myLink.addEventListener('click', function(e) {
-                                              e.preventDefault();
-                                            });</script>
-                                        
-             
             </div>
-          </div>
         </div>
-      </div>
     </div>
-  </section>
-  
+</section>
