--- a/frontend/src/app/views/admin/admin-users/user-details/user-details.component.html
+++ b/frontend/src/app/views/admin/admin-users/user-details/user-details.component.html
@@ -31,56 +31,56 @@
                                         <div class="row mt-4">
                                             <div class="col-md-3">
 
-                                                    <div class="dropdown">
-                                                      <button class="btn btn-outline dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-expanded="false">
-                                                        <span>Compte</span>
-                                                        <i class="fa fa-caret-down"></i>
-                                                      </button>
-                                                      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                                        <li><a class="dropdown-item" href="#">Compte vérifié</a></li>
-                                                        <li><a class="dropdown-item" href="#">Compte non vérifié</a></li>
-                                                      </ul>
-                                                    </div>
-                                                     
-                                      
-                                                   </div>
-                                            
-                                            <div class="col-md-1">
+
+
+                                                <label for="item">Choisir une décison:</label>
+
+                                                <select name="item" id="item">
+                                                    <option value=" Compte vérifié"> Compte vérifié</option>
+                                                    <option value=" Compte nom vérifié"> Compte non vérifié</option>
+                                                </select>
+
+
 
                                             </div>
-                                            <div class="col-md-3">
 
-                                                    <div class="dropdown">
-                                                      <button class="btn btn-outline dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-expanded="false">
-                                                        <span>Type</span>
-                                                        <i class="fa fa-caret-down"></i>
-                                                      </button>
-                                                      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                                        <li><a class="dropdown-item" href="#">Admin</a></li>
-                                                        <li><a class="dropdown-item" href="#">Simple User</a></li>
-                                                      </ul>
-                                                    </div>
-                                                     
-                                      
-                                                   </div>
 
-                                            <div class="col-md-1">
+                                            <div class="row mt-4">
+                                                <div class="col-md-3">
 
+
+
+                                                    <label for="item">Choisir une décison:</label>
+
+                                                    <select name="item" id="item">
+                                                        <option value=" Admin"> Admin</option>
+                                                        <option value=" Utilisateur simple"> Utilisateur simple</option>
+                                                    </select>
+
+
+
+                                                </div>
                                             </div>
-                                            <div class="col-md-3">
 
-                                                    <div class="dropdown">
-                                                      <button class="btn btn-outline dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-expanded="false">
-                                                        <span>3 choix</span>
-                                                        <i class="fa fa-caret-down"></i>
-                                                      </button>
-                                                      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                                        <li><a class="dropdown-item" href="#">1</a></li>
-                                                        <li><a class="dropdown-item" href="#">2</a></li>
-                                                        <li><a class="dropdown-item" href="#">3</a></li>
-                                                      </ul>
-                                                    </div>
+                                            <div class="row mt-4">
+                                                <div class="col-md-3">
+
+
+
+                                                    <label for="item">Choisir une décison:</label>
+
+                                                    <select name="item" id="item">
+                                                        <option value=" Visiteur "> Visiteur</option>
+                                                        <option value=" Guide"> Guide</option>
+                                                        <option value=" Professionnel"> Professionnel</option>
+                                                    </select>
+
+
+
+                                                </div>
                                             </div>
+
+
                                         </div>
 
                                     </div>
