hunt CRUD and display tweaks

--- a/frontend/src/app/views/user/home/home/home.component.html
+++ b/frontend/src/app/views/user/home/home/home.component.html
@@ -47,15 +47,15 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6 mx-auto text-center">
-        <h2 class="heading-black">News from Knight.</h2>
-        <p class="text-muted lead">What's new at Knight.</p>
+        <h2 class="heading-black">News from HuntKingdom.</h2>
+        <p class="text-muted lead">What's new at HuntKingdom.</p>
       </div>
     </div>
     <div class="row mt-5">
       <div class="col-md-4">
         <div class="card">
           <a href="#">
-            <img class="card-img-top img-raised" src="assets/img/blog-1.jpg" alt="Blog 1">
+            <img class="card-img-top img-raised" src="assets/img/412963.jpg" alt="Blog 1">
           </a>
           <div class="card-body">
             <a href="#" class="card-title mb-2"><h5>We launch new iOS & Android mobile apps</h5></a>
@@ -68,7 +68,7 @@
       <div class="col-md-4">
         <div class="card">
           <a href="#">
-            <img class="card-img-top img-raised" src="assets/img/blog-2.jpg" alt="Blog 2">
+            <img class="card-img-top img-raised" src="assets/img/190514.jpg" alt="Blog 2">
           </a>
           <div class="card-body">
             <a href="#" class="card-title mb-2"><h5>New update is available for the editor</h5></a>
@@ -81,7 +81,7 @@
       <div class="col-md-4">
         <div class="card">
           <a href="#">
-            <img class="card-img-top img-raised" src="assets/img/blog-3.jpg" alt="Blog 3">
+            <img class="card-img-top img-raised" src="assets/img/286966.jpg" alt="Blog 3">
           </a>
           <div class="card-body">
             <a href="#" class="card-title mb-2"><h5>The story of building #1 page builder</h5></a>
@@ -94,7 +94,7 @@
     </div>
     <div class="row mt-6">
       <div class="col-md-6 mx-auto text-center">
-        <a href="#" class="btn btn-primary">View all posts</a>
+        <a href="#" class="btn btn-primary" routerLink="/user/blogs">View all posts</a>
       </div>
     </div>
   </div>
@@ -148,7 +148,7 @@
     </div>
     <div class="row mt-5">
       <div class="col-12 text-muted text-center small-xl">
-        &copy; 2019 Knight - All Rights Reserved
+        &copy; 2022 NeN - All Rights Reserved
       </div>
     </div>
   </div>
