--- a/frontend/src/app/views/user/user-maps/camp-add/camp-add.component.html
+++ b/frontend/src/app/views/user/user-maps/camp-add/camp-add.component.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-md-7">
         <div class="section-title">
-          <h2>Add your spot</h2>
+          <h2>Camp Spot Details</h2>
         </div>
       </div>
     </div>
