--- a/frontend/src/app/views/user/user-maps/maps/maps.component.css
+++ b/frontend/src/app/views/user/user-maps/maps/maps.component.css
@@ -13,6 +13,10 @@ agm-map {
   margin-bottom: 10px;
 }
 
+.btn-danger {
+  margin-left: 10px;
+  margin-bottom: 10px;
+}
 
 .contact-us {
   padding: 150px 0px;
@@ -25,7 +29,14 @@ agm-map {
   font-weight: normal;
   text-transform: uppercase;
   letter-spacing: 8px;
-  padding-bottom: 50px;
+  padding-bottom: 25px;
+}
+
+.section-title h4 {
+  color: #6c757d;
+  font-size: 18px;
+  font-weight: inherit;
+  padding-top: 10px;
 }
 
 .section-title p {
