--- a/frontend/src/app/views/user/user-maps/maps/maps.component.html
+++ b/frontend/src/app/views/user/user-maps/maps/maps.component.html
@@ -1,35 +1,55 @@
 <section class="contact-us">
   <div class="container">
-    <div >
-      <div >
+    <div>
+      <div>
         <div class="section-title">
           <h2>Discover based On your preferences</h2>
         </div>
       </div>
     </div>
-    <div >
-      <div >
-        <div >
-          <div >
-            <button type="button" class="btn btn-dark" (click)="changeOpacity()">Change Opacity</button>
-            <button type="button" class="btn btn-dark" (click)="changeRadius()">Change Radius</button>
-            <button type="button" class="btn btn-dark" (click)="toggleHeatmap()">Toggle Heatmap</button>
-            <button type="button" class="btn btn-dark" (click)="toggleMarkers()">Toggle Markers</button>
-            <button type="button" class="btn btn-success" routerLink="camp/add">Add your spot</button>
+    <div>
+      <div>
+        <div>
+          <div>
+            <div>
+              <div class="section-title">
+                <h4>Global map settings</h4>
+              </div>
+              <button type="button" class="btn btn-dark" (click)="changeOpacity()">Change HeatMap Opacity</button>
+              <button type="button" class="btn btn-dark" (click)="changeRadius()">Change HeatMap Radius</button>
+            </div>
+            <div>
+              <div class="section-title">
+                <h4>Camp display settings</h4>
+              </div>
+              <button type="button" class="btn btn-dark" (click)="toggleCampHeatmap()">Camp Heatmap</button>
+              <button type="button" class="btn btn-dark" (click)="toggleCampMarkers()">Camp Marker</button>
+              <button type="button" class="btn btn-success" routerLink="camp/add">Add your camp spot</button>
+            </div>
+            <div>
+              <div class="section-title">
+                <h4>Hunt display settings</h4>
+              </div>
+              <button type="button" class="btn btn-dark" (click)="toggleHuntHeatmap()">Hunt Heatmap</button>
+              <button type="button" class="btn btn-dark" (click)="toggleHuntMarkers()">Hunt Marker</button>
+              <button type="button" class="btn btn-danger" routerLink="hunt/add">Add your hunt spot</button>
+            </div>
+            <div>
+            </div>
           </div>
         </div>
-      <div>
-        <div class="map" >
-          <agm-map
-            [latitude]="lat"
-            [longitude]="lng"
-            [zoom]="zoom"
-            [disableDefaultUI]="true"
-            (mapReady)="onMapLoad($event)"
-          >
-          </agm-map>
+        <div>
+          <div class="map">
+            <agm-map
+              [latitude]="lat"
+              [longitude]="lng"
+              [zoom]="zoom"
+              [disableDefaultUI]="true"
+              (mapReady)="onMapLoad($event)"
+            >
+            </agm-map>
+          </div>
         </div>
-      </div>
       </div>
 
     </div>
