--- a/frontend/src/app/views/user/user-maps/camp-add/camp-add.component.html
+++ b/frontend/src/app/views/user/user-maps/camp-add/camp-add.component.html
@@ -22,8 +22,20 @@
           <div class="form-group">
             <input type="text" class="form-control" name="address" [(ngModel)]="campSpot.address"  id="address" placeholder="Address" />
           </div>
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="rate" name="rate" [(ngModel)]="campSpot.rate" required/>
+          <div class="Skills">
+            <label>Rate</label>
+            <div class="rating">
+              <input type="radio" name="html">
+              <input type="radio" name="html">
+              <input type="radio" name="html">
+              <input type="radio" name="html">
+              <input type="radio" name="html">
+              <input type="radio" name="html">
+              <input type="radio" name="html">
+              <input type="radio" name="html">
+              <input type="radio" name="html">
+              <input type="radio" name="html">
+            </div>
           </div>
           <div class="form-group">
             <input type="text" class="form-control" placeholder="Latitude" [(ngModel)]="camp_lat" name="camp_latitude" disabled/>
