--- a/frontend/src/app/views/user/user-maps/maps/maps.component.css
+++ b/frontend/src/app/views/user/user-maps/maps/maps.component.css
@@ -20,7 +20,7 @@ agm-map {
 
 .contact-us {
   padding: 150px 0px;
-  background: #2c3034;
+  background-image: linear-gradient(to right, #0B2518 0%, 8.862433582544327%, #0B2518 17.724867165088654%, 49.669311195611954%, #0D0D0D 81.61375522613525%);
 }
 
 .section-title h2 {
