--- a/frontend/src/app/views/user/user-events/events/events.component.html
+++ b/frontend/src/app/views/user/user-events/events/events.component.html
@@ -5,7 +5,7 @@
             <p class="fs-5 mb-4">HuntingKigdom met à votre disposition une intefcae pour vos évenements , vos campings , vos conférences , vos sorties ... Profiter bien ^^
             </p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                <button type="button" class=" primarHKBtn btn btn-outline-info btn-lg px-4 me-sm-3 fw-bold">Ajoutez votre evenement </button>
+                <button type="button" class=" primarHKBtn btn btn-outline-info btn-lg px-4 me-sm-3 fw-bold" routerLink="event/add">Ajoutez votre evenement </button>
                 <button type="button" class=" secondaryHKBtn btn btn-outline-light btn-lg px-4">Cherchez votre evenement</button>
             </div>
 
@@ -19,26 +19,28 @@
     <h2 class="pb-2 border-bottom text-dark">Derniers évenements</h2>
 
     <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
-        <div class="col">
-            <!-- *ngFor="let spot of campList" -->
+        <div class="col" *ngFor="let event of eventList">
             <div class="col">
-                <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('unsplash-photo-3.jpg');">
-                    <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
-                        <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Another longer title belongs here</h2>
+                <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" crossorigin="anonymous" style="background-image: url('http://localhost:3000/events/getImage/0795ac43-c10e-49a1-93b4-b59583919e49.png'); ">
+                    <button class="border-0 bg-dark text-white">
+                      <!--  event.coverImagePath -->
+                   <!-- <img class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1" crossorigin="anonymous" src="http://localhost:3000/events/getImage/0795ac43-c10e-49a1-93b4-b59583919e49.png"> -->
+                        <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">{{event.name}}</h2>
                         <ul class="d-flex list-unstyled mt-auto">
                             <li class="me-auto">
                                 <img src="https://github.com/twbs.png" alt="Bootstrap" width="32" height="32" class="rounded-circle border border-white">
                             </li>
                             <li class="d-flex align-items-center me-3">
                                 <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#geo-fill"></use></svg>
-                                <small>California</small>
+                                <small>{{event.pays}}</small>
                             </li>
                             <li class="d-flex align-items-center">
                                 <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#calendar3"></use></svg>
-                                <small>5d</small>
+                                <small>{{event.startDate}}</small>
                             </li>
                         </ul>
-                    </div>
+
+                  </button>
                 </div>
             </div>
         </div>
