--- a/frontend/src/app/layouts/user-layout/user-layout.component.html
+++ b/frontend/src/app/layouts/user-layout/user-layout.component.html
@@ -28,7 +28,7 @@
           <li class="nav-item">
             <a class="nav-link page-scroll" href="#shop" routerLink="/products">Shop</a>
           </li>
-          <li class="nav-item  nav-link page-scroll   text-neutral-300 hover:text-gray-700">
+          <li class="nav-item  nav-link page-scroll   text-gray-400 hover:text-gray-700">
             <a role="button" class="relative flex" (click)="toggle()">
               <svg class="flex-1 w-8 h-8 fill-current" viewbox="0 0 24 0">
                 <path
