--- a/frontend/src/app/views/user/user-products/products/desert/desert.component.html
+++ b/frontend/src/app/views/user/user-products/products/desert/desert.component.html
@@ -1,8 +1,8 @@
-<section class="products">
+<section class="products h-full">
   <div class="h-full">
     <div id="test" class="max-w-2xl mx-auto py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8">
       <h2 class="sr-only">Products</h2>
-      <nav class="navbar navbar-expand  justify-content-center pb-24 pt-20  ">
+      <nav class="navbar navbar-expand  justify-content-center pb-32 pt-20  ">
         <div class="nav justify-content-center ">
   <!-- images that hover-->
 
