--- a/frontend/src/app/views/user/user-maps/hunt-add/hunt.component.html
+++ b/frontend/src/app/views/user/user-maps/hunt-add/hunt.component.html
@@ -31,7 +31,8 @@
           <div class="form-group">
             <input type="text" class="form-control" placeholder="Longitude" [(ngModel)]="camp_lng" name="camp_longitude" disabled/>
           </div>
-          <button (click)="save()" class="btn btn-light">Add</button>
+          <button (click)="save()" type="button" class="btn btn-info">Add</button>
+          <button (click)="home()" type="button" class="btn btn-danger">Return</button>
         </form>
       </div>
 
