--- a/frontend/src/app/views/user/user-events/add-event/add-event.component.css
+++ b/frontend/src/app/views/user/user-events/add-event/add-event.component.css
@@ -1,3 +1,4 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js");
 body {
     background-image: linear-gradient(to right, #0B2518 0%, 8.862433582544327%, #0B2518 17.724867165088654%, 49.669311195611954%, #0D0D0D 81.61375522613525%);
     color: white;
