--- a/frontend/src/app/views/admin/admin-users/user-details/user-details.component.html
+++ b/frontend/src/app/views/admin/admin-users/user-details/user-details.component.html
@@ -9,40 +9,52 @@
                         <div class="container rounded bg-white mt-5">
                             <div class="row">
                                 <div class="col-md-4 border-right">
-                                    <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img
+                                    <div class="d-flex flex-column align-items-center text-center p-3 py-5" ><img
                                             class="rounded-circle mt-5" src="https://i.imgur.com/0eg0aG0.jpg"
-                                            width="90"><span class="font-weight-bold">{{user.Nom}}</span><span
+                                            width="180"><span class="font-weight-bold">{{user.Nom}}</span><span
                                             class="text-black-50"></span><span>{{user.type}}</span></div>
                                 </div>
                                 <div class="col-md-8">
                                     <div class="p-3 py-5">
 
                                         <div class="row mt-2">
-                                            <div class="col-md-6"><input type="text" class="form-control"
-                                                    placeholder="first name" value="{{user.Nom}} {{user.Prenom}}">
+                                            <div class="col-md-6"><input style="width: 400px; height: 70px;"  type="text" class="form-control"
+                                                    placeholder="Nom" value="{{user.Nom}} ">
                                             </div>
-                                            <div class="col-md-6"><input type="text" class="form-control"
-                                                    placeholder="Email" value="{{user.Email}}"></div>
                                         </div>
+
+                                        <div class="row mt-2">
+                                        
+                                            <div class="col-md-6"><input style="width: 400px; height: 70px;" type="text" class="form-control"
+                                                    placeholder="Prenom" value="{{user.Prenom}}"></div>
+                                        </div>
+
+                                        
+                                         <div class="row mt-2">
+                                            <div class="col-md-6"><input style="width: 400px; height: 70px;" type="text" class="form-control"
+                                                    placeholder="Email" value="{{user.Email}} ">
+                                            </div>
+                                        </div>
+                                        
                                         <!-- <div class="row mt-3">
                                     <div class="col-md-6"><input type="text" class="form-control" placeholder="Email" value="{{user.Email}}"></div>
                                     <div class="col-md-6"><input type="text" class="form-control"  placeholder="Bio" value="{{user.Bio}}"></div>
                                 </div> -->
                                 <form #f="ngForm">
-                                    <div class="row mt-4">
+                                    <div class="row mt-6">
                                         <div class="col-md-3">
-                                            <label >Choisir une décison:</label>
+                                            <label style="width: 400px; height: 50px;"> <h1>Est il vérifié?</h1></label>
                                         
-                                            <select name="isValidated" #isValidated="ngModel" ngModel>
-                                                <option value= true> Compte vérifié</option>
-                                                <option value=false> Compte non vérifié</option>
+                                            <select style="width: 400px; height: 70px;" name="isValidated" #isValidated="ngModel" ngModel>
+                                                <option value= true> <h1>Compte vérifié</h1></option>
+                                                <option value=false> <h1>Compte non vérifié</h1></option>
                                             </select>
                                         </div>
                                         <div class="row mt-4">
                                             <div class="col-md-3">
-                                                <label >Choisir une décison:</label>
+                                                <label style="width: 400px; height: 70px;"><h1>Est il admin ?</h1></label>
 
-                                                <select name="isAdmin" #isAdmin="ngModel" ngModel>
+                                                <select style="width: 400px; height: 70px;" name="isAdmin" #isAdmin="ngModel" ngModel>
                                                     <option value=true> Admin</option>
                                                     <option value=false> Utilisateur simple</option>
                                                 </select>
@@ -50,9 +62,9 @@
                                         </div>
                                         <div class="row mt-4">
                                             <div class="col-md-3">
-                                                <label >Choisir une décison:</label>
+                                                <label style="width: 400px; height: 70px;"><h1>quel est son role? </h1></label>
 
-                                                <select name="type" #type="ngModel" ngModel>
+                                                <select style="width: 400px; height: 70px;" name="type" #type="ngModel" ngModel>
                                                     <option value=" Visiteur "> Visiteur</option>
                                                     <option value=" Guide"> Guide</option>
                                                     <option value=" Professionnel"> Professionnel</option>
@@ -67,7 +79,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
+                                    <div  class="d-flex justify-content-center mx-4 mb-3 mb-lg-4" >
                                         <button type="button" class="btn btn-primary btn-lg" (click)="ValideUser(f.value)">Mettre à jour</button>
                                       </div>
 
@@ -77,16 +89,7 @@
                                 </div>
                             </div>
                         </div>
-                        <script type='text/javascript'
-                            src='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js'></script>
-                        <script type='text/javascript' src='#'></script>
-                        <script type='text/javascript' src='#'></script>
-                        <script type='text/javascript' src='#'></script>
-                        <script type='text/javascript'></script>
-                        <script type='text/javascript'>var myLink = document.querySelector('a[href="#"]');
-                            myLink.addEventListener('click', function (e) {
-                                e.preventDefault();
-                            });</script>
+                        
 
 
 
