--- a/frontend/src/app/views/user/user-register/register/register.component.html
+++ b/frontend/src/app/views/user/user-register/register/register.component.html
@@ -33,18 +33,18 @@
               <div class="d-flex flex-row align-items-center mb-4">
                 <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                 <div class="form-outline flex-fill mb-0">
-                  <input type="text" id="form3Example2c" class="form-control" name="Password" placeholder="Password" #Password="ngModel"  ngModel />
+                  <input type="password" id="form3Example2c" class="form-control" name="Password" placeholder="Password" #Password="ngModel"  ngModel />
                   <!--                      <label class="form-label" for="form3Example2c">Mot de passe</label>-->
                 </div>
               </div>
 
 
-              <div class="form-check d-flex  mb-5">
+              <!-- <div class="form-check d-flex  mb-5">
                 <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3c"/>
                 <label class="form-check-label" for="form2Example3c">
                   I agree all statements in <a href="#!">Terms of service</a>
                 </label>
-              </div>
+              </div> -->
 
               <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
                 <button type="button" class="btn btn-primary btn-lg" (click)="addUser(f.value)">Register</button>
