--- a/frontend/src/app/views/user/user/register/register.component.html
+++ b/frontend/src/app/views/user/user/register/register.component.html
@@ -48,7 +48,7 @@
                 <div class="d-flex flex-row align-items-center mb-4">
                   <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                   <div class="form-outline flex-fill mb-0">
-                    <input type="text" id="form3Example2c" class="form-control" name="Password" placeholder="Password" #Password="ngModel"  ngModel />
+                    <input type="password" id="form3Example2c" class="form-control" name="Password" placeholder="Password" #Password="ngModel"  ngModel />
                     <!--                      <label class="form-label" for="form3Example2c">Mot de passe</label>-->
                   </div>
                 </div>
