--- a/frontend/src/app/views/user/user/user-update/user-update.component.html
+++ b/frontend/src/app/views/user/user/user-update/user-update.component.html
@@ -26,7 +26,7 @@
                   <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                   <div class="form-outline flex-fill mb-0">
                     <input type="text" id="form3Example3c" class="form-control" name="Age" placeholder="{{user.Age}}" #Age="ngModel"  ngModel/>
-                    <!--                      <label class="form-label" for="form3Example3c">Prenom</label>-->
+                                         <label class="form-label" for="form3Example3c">Prenom</label>
                   </div>
                 </div>
                 <div class="d-flex flex-row align-items-center mb-4">
